# bruggeman

./: README.md  pyproject.toml
.github/workflows/: ci.yml
bruggeman/: __init__.py  edelman.py  flow1d.py  flow2d.py  general.py
docs/examples/: bruggeman_123_05.ipynb  bruggeman_126_33.ipynb  bruggeman_128_0x.ipynb  bruggeman_133.ipynb  bruggeman_133_16.ipynb  bruggeman_133_1x.ipynb  bruggeman_21_11.ipynb  bruggeman_355_19.ipynb  check_ierfc.ipynb  edelman.ipynb  index.rst
tests/: test_import.py  test_notebooks.py
